--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "backend": "json-server-auth --watch db.json --routes routes.json --port 4201 --delay 1000"
+    "backend": "json-server-auth --watch src/assets/db.json --routes routes.json --port 4201 --delay 1000"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +30,7 @@
     "@angular/cli": "~14.0.4",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^18.0.3",
     "jasmine-core": "~4.1.0",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
